feat: Add WBTC to explorer

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -117,6 +117,7 @@
                 <option value="MATIC">MATIC</option>
                 <option value="ETH">ETH</option>
                 <option value="DAI">DAI</option>
+                <option value="WBTC">WBTC</option>
               </select>
             </div>
             <div>
