--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -76,9 +76,6 @@
                 <option value="250">250</option>
                 <option value="500">500</option>
                 <option value="1000">1000</option>
-                <option value="2500">2500</option>
-                <option value="5000">5000</option>
-                <option value="10000">10,000</option>
               </select>
             </div>
             <div>
@@ -151,7 +148,7 @@
             </thead>
             <tbody>
               <tr v-for="(x, index) in transfers">
-                <td class="index">{{ index + 1 }}</td>
+                <td class="index">{{ ((page * perPage) + index + 1) }}</td>
                 <td class="timestamp" :title="x.isoTimestamp">{{ x.relativeTimestamp }}</td>
                 <td :class="x.sourceChainSlug">
                   <img :src="x.sourceChainImageUrl" :alt="x.sourceChainName">
@@ -222,9 +219,6 @@
               <option value="250">250</option>
               <option value="500">500</option>
               <option value="1000">1000</option>
-              <option value="2500">2500</option>
-              <option value="5000">5000</option>
-              <option value="10000">10,000</option>
             </select>
           </div>
           <div class="pagination">
