Allow transfer source transaction hash as filter

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -140,7 +140,7 @@
             </div>
             <div>
               <label>Transfer ID:</label>
-              <input class="filterTransferId" v-model="filterTransferId" @input="setFilterTransferId" placeholder="transfer ID" />
+              <input class="filterTransferId" v-model="filterTransferId" @input="setFilterTransferId" placeholder="transfer ID or tx hash" />
             </div>
             <div>
               <label>Date:</label>
