Use new optimism subgraph endpoint

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -35,6 +35,7 @@
           <div id="chartSelection">{{ chartSelection }}</div>
         </details>
       </div>
+      <!--
       <div id="stats">
         <div id="volume">
           <details open>
@@ -44,7 +45,7 @@
               <div class="ethereum">Ethereum: {{volume.ethereum.formattedAmount}}</div>
               <div class="xdai">xDai: {{volume.xdai.formattedAmount}}</div>
               <div class="polygon">Polygon: {{volume.polygon.formattedAmount}}</div>
-              <!--<div class="optimism">Optimism: {{volume.optimism.formattedAmount}}</div>-->
+              <div class="optimism">Optimism: {{volume.optimism.formattedAmount}}</div>
               <div class="arbitrum">Arbitrum: {{volume.arbitrum.formattedAmount}}</div>
             </div>
         </div>
@@ -56,11 +57,12 @@
               <div class="ethereum">Ethereum: {{tvl.ethereum.formattedAmount}}</div>
               <div class="xdai">xDai: {{tvl.xdai.formattedAmount}}</div>
               <div class="polygon">Polygon: {{tvl.polygon.formattedAmount}}</div>
-              <!--<div class="optimism">Optimism: {{tvl.optimism.formattedAmount}}</div>-->
+              <div class="optimism">Optimism: {{tvl.optimism.formattedAmount}}</div>
               <div class="arbitrum">Arbitrum: {{tvl.arbitrum.formattedAmount}}</div>
             </div>
         </div>
       </div>
+      -->
       <details open>
       <summary>
         <span>Transfers ▾</span>
