--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -10,6 +10,7 @@
     <meta name="application-name" content="Hop">
     <title>Hop Explorer</title>
     <link rel="canonical" href="https://explorer.hop.exchange">
+    <link rel="icon" href="https://app.hop.exchange/favicon.ico">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
