--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -12,6 +12,7 @@
     <link rel="canonical" href="https://explorer.hop.exchange">
     <link rel="icon" href="https://app.hop.exchange/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="static.js"></script>
   </head>
   <body>
     <div id="app" v-cloak>
