rename chain: xdai -> gnosis

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -45,7 +45,7 @@
             <div>
               <div>Total: {{volume.total.formattedAmount}}</div>
               <div class="ethereum">Ethereum: {{volume.ethereum.formattedAmount}}</div>
-              <div class="xdai">xDai: {{volume.xdai.formattedAmount}}</div>
+              <div class="gnosis">Gnosis: {{volume.gnosis.formattedAmount}}</div>
               <div class="polygon">Polygon: {{volume.polygon.formattedAmount}}</div>
               <div class="optimism">Optimism: {{volume.optimism.formattedAmount}}</div>
               <div class="arbitrum">Arbitrum: {{volume.arbitrum.formattedAmount}}</div>
@@ -57,7 +57,7 @@
             <div>
               <div>Total: {{tvl.total.formattedAmount}}</div>
               <div class="ethereum">Ethereum: {{tvl.ethereum.formattedAmount}}</div>
-              <div class="xdai">xDai: {{tvl.xdai.formattedAmount}}</div>
+              <div class="gnosis">Gnosis: {{tvl.gnosis.formattedAmount}}</div>
               <div class="polygon">Polygon: {{tvl.polygon.formattedAmount}}</div>
               <div class="optimism">Optimism: {{tvl.optimism.formattedAmount}}</div>
               <div class="arbitrum">Arbitrum: {{tvl.arbitrum.formattedAmount}}</div>
@@ -93,7 +93,7 @@
                 <option value="">All</option>
                 <option value="ethereum">Ethereum</option>
                 <option value="polygon">Polygon</option>
-                <option value="xdai">xDai</option>
+                <option value="gnosis">Gnosis</option>
                 <option value="optimism">Optimism</option>
                 <option value="arbitrum">Arbitrum</option>
               </select>
@@ -104,7 +104,7 @@
                 <option value="">All</option>
                 <option value="ethereum">Ethereum</option>
                 <option value="polygon">Polygon</option>
-                <option value="xdai">xDai</option>
+                <option value="gnosis">Gnosis</option>
                 <option value="optimism">Optimism</option>
                 <option value="arbitrum">Arbitrum</option>
               </select>
