Add notice banner

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -15,6 +15,13 @@
     <script src="static.js"></script>
   </head>
   <body>
+  <div id="banner">
+    <div>
+      ⚠️ The <a href="https://thegraph.com/legacy-explorer/subgraph/hop-protocol/hop-arbitrum?ve
+rsion=pending" target="_blank">subgraphs</a> are currently experiencing some issues so the table
+might not reflect the latest state.
+      </div>
+    </div>
     <div id="app" v-cloak>
       <div class="chartView">
         <details open>
