Update Optimism Pre-regenesis explorer link

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -233,7 +233,7 @@ might not reflect the latest state.
                   </span>
                 </td>
                 <td class="bondTx">
-                  <span v-if="x.preregenesis">
+                  <span v-if="x.preregenesis" title="This transaction occurred before the Optimism Regenesis">
                     (pre-regenesis)
                   </span>
                   <span v-if="x.bondTransactionHash">
