Text align right numbers

--- a/mainnet/index.html
+++ b/mainnet/index.html
@@ -185,7 +185,7 @@ might not reflect the latest state.
           <table>
             <thead>
               <tr>
-                <th></th><th>Date</th><th>Source</th><th>Destination</th><th>Transfer ID</th><th>Transfer Tx</th><th>Amount</th><th>Amount USD</th><th>Token</th><th>Bonder Fee</th><th>Bonded</th><th>Bonded Tx</th><th>Bonded Date</th><th>Bonded Within</th><th>Bonder</th>
+                <th></th><th>Date</th><th>Source</th><th>Destination</th><th>Transfer ID</th><th>Transfer Tx</th><th>Token</th><th>Amount</th><th>Amount USD</th><th>Bonder Fee</th><th>Bonded</th><th>Bonded Tx</th><th>Bonded Date</th><th>Bonded Within</th><th>Bonder</th>
               </tr>
             </thead>
             <tbody>
@@ -213,13 +213,13 @@ might not reflect the latest state.
                     {{ x.transactionHashTruncated }}
                   </a>
                 </td>
-                <td class="amount" :title="x.amount">{{ x.displayAmount }}</td>
-                <td class="amount" :title="`${x.displayAmountUsd} @ ${x.displayTokenPriceUsd}`">{{ x.displayAmountUsd }}</td>
                 <td class="token">
                   <img :src="x.tokenImageUrl" :alt="x.token">
                   {{ x.token }}
                 </td>
-                <td class="bonderFee" :title="x.bonderFee">
+                <td class="amount number" :title="x.amount">{{ x.displayAmount }}</td>
+                <td class="amount number" :title="`${x.displayAmountUsd} @ ${x.displayTokenPriceUsd}`">{{ x.displayAmountUsd }}</td>
+                <td class="bonderFee number" :title="x.bonderFee">
                   <span v-if="x.sourceChain !== 1">
                     {{ x.displayBonderFee }}
                   </span>
